chore: prevent gallery height too big

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -867,6 +867,9 @@ video {
 .h-8 {
   height: 2rem;
 }
+.max-h-96 {
+  max-height: 24rem;
+}
 .min-h-screen {
   min-height: 100vh;
 }
